--- a/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
+++ b/uicorektest/src/main/res/layout/activity_imagek_binding_adapter.xml
@@ -17,5 +17,17 @@
             android:layout_height="100dp"
             app:loadImageBlur="@{R.mipmap.uicorek_img}"
             app:placeholder="@{R.mipmap.uicorek_img}" />
+
+        <com.mozhimen.uicorek.imagek.ImageKCircleText
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@color/black"
+            app:imageKCircleText_borderColor="@color/ui_gray_000"
+            app:imageKCircleText_borderOverlay="true"
+            app:imageKCircleText_borderWidth="2dp"
+            app:imageKCircleText_fillColor="@color/ui_gray_300"
+            app:imageKCircleText_textColor="@color/ui_gray_000"
+            app:imageKCircleText_textContent="123"
+            app:imageKCircleText_textSize="16sp" />
     </LinearLayout>
 </layout>
