--- a/app/src/main/res/layout/item_demo_header.xml
+++ b/app/src/main/res/layout/item_demo_header.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="left|bottom"
         android:text="星座晴雨表"
         android:textSize="40sp"
-        android:textColor="@color/white"
+        android:textColor="@color/ui_gray_000"
         android:textStyle="bold"
         tools:ignore="HardcodedText,RtlHardcoded"
         android:layout_margin="50dp"/>
