--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="viewk_wheel_textsize">20sp</dimen>
+    <dimen name="viewk_wheel_textsize">@dimen/sp_20</dimen>
+
+    <dimen name="sp_10">10sp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_20">20sp</dimen>
+
+    <dimen name="dp_010">10dp</dimen>
+    <dimen name="dp_015">15dp</dimen>
+    <dimen name="dp_020">20dp</dimen>
+    <dimen name="dp_030">30dp</dimen>
+    <dimen name="dp_040">40dp</dimen>
+    <dimen name="dp_050">50dp</dimen>
+    <dimen name="dp_060">60dp</dimen>
+    <dimen name="dp_070">70dp</dimen>
+    <dimen name="dp_080">80dp</dimen>
+    <dimen name="dp_090">90dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
 </resources>
