--- a/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/ui_gray_000"
         android:orientation="vertical">
 
         <com.mozhimen.uicorek.layoutk.btn.LayoutKBtnSwitch
