--- a/uicorek/src/main/res/values/themes.xml
+++ b/uicorek/src/main/res/values/themes.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="App_Theme_Translucent" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item><!--设置状态栏半透明状态, true为半透明, false为不透明-->
+        <item name="android:windowTranslucentNavigation">true</item><!--设置导航栏半透明状态, true为半透明, false为不透明-->
+    </style>
+
+    <style name="App_Theme_Transparent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/ui_transparent</item> <!-- 设置状态栏背景色为透明 -->
+        <item name="android:navigationBarColor">@color/ui_transparent</item> <!-- 设置导航栏背景色为透明 -->
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item> <!-- 设置状态栏文字色为深色, true为深色, false为白色 -->
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item> <!-- 设置导航栏文字色为深色, true为深色, false为白色 -->
     </style>
 
     <!--////////////////////////////////////////////////////////////////////////////////////////////////-->
