--- a/basicktest/src/main/res/layout/activity_utilk_android.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_android.xml
@@ -50,5 +50,11 @@
             android:onClick="goUtilKScreen"
             android:text="goUtilKScreen"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Btn_Style"
+            android:onClick="goUtilKView"
+            android:text="goUtilKView"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
