--- a/basicktest/src/main/res/layout/activity_utilk_view.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_view.xml
@@ -10,10 +10,16 @@
         android:orientation="vertical"
         tools:context=".utilk.android.UtilKViewActivity">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/utilk_view_btn_debounce"
             style="@style/Btn_Style"
             android:text="按钮点击消抖"
+            tools:ignore="HardcodedText" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/utilk_view_btn_debounce_suspend"
+            style="@style/Btn_Style"
+            android:text="按钮点击消抖(协程)"
             tools:ignore="HardcodedText" />
     </LinearLayout>
 </layout>
