--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
 
     <dimen name="sp_10">10sp</dimen>
     <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_13">13sp</dimen>
     <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="sp_18">18sp</dimen>
