--- a/uicorektest/src/main/res/layout/activity_toastk.xml
+++ b/uicorektest/src/main/res/layout/activity_toastk.xml
@@ -7,10 +7,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".toastk.ToastKActivity">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/toastk_btn"
-            style="@style/Btn_Style" />
+            android:id="@+id/toastk_btn_normal"
+            android:text="弹出toast"
+            style="@style/Btn_Style"
+            tools:ignore="HardcodedText" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toastk_btn_custom"
+            android:text="弹出自定义toast"
+            style="@style/Btn_Style"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 </layout>
