--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="dp_005">5dp</dimen>
     <dimen name="dp_010">10dp</dimen>
     <dimen name="dp_015">15dp</dimen>
+    <dimen name="dp_018">18dp</dimen>
     <dimen name="dp_020">20dp</dimen>
     <dimen name="dp_030">30dp</dimen>
     <dimen name="dp_040">40dp</dimen>
