--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <!--/////////////////////////////////////////////////-->
 
     <dimen name="dp_004">4dp</dimen>
+    <dimen name="dp_006">6dp</dimen>
     <dimen name="dp_008">8dp</dimen>
 
     <!--/////////////////////////////////////////////////-->
