--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
 
     <!--/////////////////////////////////////////////////-->
 
+    <dimen name="dp_003">3dp</dimen>
     <dimen name="dp_005">5dp</dimen>
     <dimen name="dp_010">10dp</dimen>
     <dimen name="dp_015">15dp</dimen>
@@ -29,6 +30,7 @@
     <dimen name="dp_045">45dp</dimen>
     <dimen name="dp_050">50dp</dimen>
     <dimen name="dp_060">60dp</dimen>
+    <dimen name="dp_065">65dp</dimen>
     <dimen name="dp_070">70dp</dimen>
     <dimen name="dp_080">80dp</dimen>
     <dimen name="dp_090">90dp</dimen>
