--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="dp_005">5dp</dimen>
     <dimen name="dp_010">10dp</dimen>
     <dimen name="dp_015">15dp</dimen>
+    <dimen name="dp_016">16dp</dimen>
     <dimen name="dp_018">18dp</dimen>
     <dimen name="dp_020">20dp</dimen>
     <dimen name="dp_024">24dp</dimen>
@@ -35,4 +36,8 @@
     <dimen name="dp_080">80dp</dimen>
     <dimen name="dp_090">90dp</dimen>
     <dimen name="dp_100">100dp</dimen>
+    <dimen name="dp_110">110dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_130">130dp</dimen>
+    <dimen name="dp_140">140dp</dimen>
 </resources>
