--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_130">130dp</dimen>
     <dimen name="dp_140">140dp</dimen>
+    <dimen name="dp_200">200dp</dimen>
 </resources>
