--- a/uicorek/src/main/res/values/styles.xml
+++ b/uicorek/src/main/res/values/styles.xml
@@ -58,11 +58,25 @@
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_014" />
 
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000.Size_018">
+        <item name="android:textSize">@dimen/sp_18</item>
+    </style>
+
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal.Color_Gray_000">
         <item name="android:textColor">@color/ui_gray_000</item>
     </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Normal" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999.Size_020">
+        <item name="android:textSize">@dimen/sp_20</item>
+    </style>
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold.Color_Gray_999" />
+
+    <style name="Txt_Style.Font_Sans_Serif.Gravity_Center.Style_Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="Txt_Style.Font_Sans_Serif.Gravity_Center" />
 
