--- a/uicorek/src/main/res/values/dimens.xml
+++ b/uicorek/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
 
     <!--/////////////////////////////////////////////////-->
 
+    <dimen name="dp_000">0dp</dimen>
     <dimen name="dp_003">3dp</dimen>
     <dimen name="dp_004">4dp</dimen>
     <dimen name="dp_005">5dp</dimen>
@@ -24,6 +25,7 @@
     <dimen name="dp_020">20dp</dimen>
     <dimen name="dp_024">24dp</dimen>
     <dimen name="dp_030">30dp</dimen>
+    <dimen name="dp_035">35dp</dimen>
     <dimen name="dp_040">40dp</dimen>
     <dimen name="dp_045">45dp</dimen>
     <dimen name="dp_050">50dp</dimen>
