--- a/uicorektest/src/main/res/layout/activity_adapterk.xml
+++ b/uicorektest/src/main/res/layout/activity_adapterk.xml
@@ -26,5 +26,11 @@
             android:onClick="goAdapterKRecyclerVb2"
             android:text="goAdapterKRecyclerVb2"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Btn_Style"
+            android:onClick="goAdapterKRecyclerVb"
+            android:text="goAdapterKRecyclerVb"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
